fixtures/errors/object_prevent_extensions_proxy_invariant.js
const proxy = new Proxy({}, {
    preventExtensions() {
        console.log("preventExtensions trap called");
        return true;
    }
});

Object.preventExtensions(proxy);
